# data_quality

./: 404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  schema_crm.py
.github/workflows/: CI.yml
app/: etl.py  etl_infer_schema.py  exemplo_tdd.py  ler_duckdb.py  schemas.py  schemas_email.py
docs/: index.md
exemplo/: exemplo00.py  exemplo01.py
search/: search_index.json
sql/: insert_into_tabela_bronze_email.sql  my_duckdb.db
tests/: test_exemplo00.py  test_func_etl.py  test_funcao_turma.py
